fix visualViewport on ff & thin scrollbars

--- a/src/sass/partials/_basic.scss
+++ b/src/sass/partials/_basic.scss
@@ -179,7 +179,7 @@ img:not([src]) {
     background: rgba(black, .5);
 }
 
-body {
+* {
     scrollbar-color: rgba($darkgrey, .3) transparent;
     scrollbar-width: thin;
 }
